[package]
name = "axum-basic-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["multipart"] }
axum-extra = { version = "0.9.6", features = ["cookie"] }
base64ct = { version = "1.6.0", features = ["alloc"] }
futures-util = "0.3.31"
time = "0.3.36"
tower = "0.5.1"
tower-test = "0.4.0"
